--- a/selector.html
+++ b/selector.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Ricky Rain Frog - Official Jellycat</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -10,18 +11,18 @@
       <nav>
         <button aria-label="Open hamburger menu">☰</button>
         <a href="#">Jellycat logo</a>
-        <a href="#">Home / </a>
-        <a href="#">Discover / </a>
-        <a href="#">Spring & Summer</a>
       </nav>
     </header>
     <main>
       <p>Jelly Hero</p>
       <section aria-label="Product images carousel">
         <ul>
-          <li><img src="frog.jpg" alt="Slide 1 Ricky Rain Frog" /></li>
-          <li><img src="frog2.jpg" alt="Slide 2 Ricky Rain Frog" /></li>
-          <li><img src="frog3.jpg" alt="Slide 3 Ricky Rain Frog" /></li>
+          <li><img src="images/frog1.jpg" alt="Slide 1 Ricky Rain Frog" /></li>
+          <li><img src="images/frog2.jpg" alt="Slide 2 Ricky Rain Frog" /></li>
+          <li><img src="images/frog3.jpg" alt="Slide 3 Ricky Rain Frog" /></li>
+          <li><img src="images/frog4.jpg" alt="Slide 4 Ricky Rain Frog" /></li>
+          <li><img src="images/frog5.jpg" alt="Slide 5 Ricky Rain Frog" /></li>
+          <li><img src="images/frog6.jpg" alt="Slide 5 Ricky Rain Frog" /></li>
         </ul>
         <nav>
           <button type="button" aria-label="Previous">◀</button>
@@ -35,38 +36,38 @@
         <p>⭐⭐⭐⭐⭐ <a href="#">(268 Reviews)</a></p>
         <p>Select a style</p>
         <a href="#">How big am I?</a>
-          <select>
-            <option>Medium (Out of stock)</option>
-          </select>
+        <select>
+          <option>Medium (Out of stock)</option>
+        </select>
         <button type="button" disabled>Out of stock</button>
-          <select>
-            <option>Add to Wishlist</option>
-          </select>
-          <button type="button">Notify me when available</button>
+        <select>
+          <option>Add to Wishlist</option>
+        </select>
+        <button type="button">Notify me when available</button>
       </section>
 
       <section>
-        <img src="cat.gif" alt="Jellycat cat">
+        <img src="cat.gif" alt="Jellycat cat" />
         <nav>
           <a href="#">WE SAY…</a>
           <a href="#">YOU SAY…</a>
         </nav>
-        <img src="quoteleft.png" alt="Quote left">
+        <img src="quoteleft.png" alt="Quote left" />
         <p>
-          Our much-loved and most famous amphibian is Ricky Rain Frog. Why the glum face? 
-          Well, it’s not easy being the only frog in town that can’t swim a stroke!<br><br>
-          Ricky is great friends with Timmy Turtle. Together they love to laze around 
-          with a mug of something hot and have a good old moan. And who can blame them?<br><br>
+          Our much-loved and most famous amphibian is Ricky Rain Frog. Why the
+          glum face? Well, it’s not easy being the only frog in town that can’t
+          swim a stroke!<br /><br />
+          Ricky is great friends with Timmy Turtle. Together they love to laze
+          around with a mug of something hot and have a good old moan. And who
+          can blame them?<br /><br />
           Perhaps you can turn his frown upside down.
         </p>
-        
-        <img src="quoteright.png" alt="Quote right">
-      </section>
-      
 
-      /* bron dropdown:
-      https://www.anchorgroup.tech/blog/easy-html-dropdown-menu-coding-tutorial
-      */
+        <img src="quoteright.png" alt="Quote right" />
+      </section>
+
+      <!-- bron dropdown:
+      https://www.anchorgroup.tech/blog/easy-html-dropdown-menu-coding-tutorial -->
       <section>
         <details>
           <summary>PRODUCT DETAILS</summary>
@@ -97,17 +98,19 @@
       </section>
     </main>
     <footer>
-      <p>Follow us for the joy of it</p>
-      <nav>
+      <section aria-label="Social media">
+        <h3>Follow us</h3>
         <ul>
-          <li><img src="Tiktok.jpg" alt="Tiktok logo" /></li>
-          <li><img src="Instagram.jpg" alt="Instagram logo" /></li>
-          <li><img src="Facebook.jpg" alt="Facebook logo" /></li>
-          <li><img src="X.jpg" alt="X logo" /></li>
+          <li><a href="#">TikTok</a></li>
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">YouTube</a></li>
         </ul>
-      </nav>
-      <p>© Jellycat Limited 2025. All rights reserved.</p>
-      <a href="#">Cookievoorkeuren</a>
+      </section>
+
+      <p>©Jellycat Limited 2025. All rights reserved</p>
+
+      <button type="button">Cookie settings</button>
     </footer>
   </body>
 </html>
